sample-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-boot
spec:
  containers:
  - name: hello-boot
    image: urvishmparikh/spring-boot-docker-test
    ports:
    - containerPort: 8080
