sample-ingress-istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: boot-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - boot-gateway
  http:
  - match:
    - uri:
    route:
    - destination:
        port:
          number: 8080
        host: sample-boot
